# animated-wallpaper

./: .gitignore  README.md
c++/: CMakeLists.txt
c++/include/: gray_scott.hpp  matrix.hpp  matrix2.hpp  matrix_ops.hpp  profiler.hpp
c++/src/: benchmark.cpp  conv2d.cpp  gray_scott.cpp  main.cpp  matrix.cpp
julia/: Manifest.toml  Project.toml  grayscott.jl
julia/GrayScottSim/: Manifest.toml  Project.toml
julia/GrayScottSim/src/: GrayScottSim.jl
rust/: Cargo.toml
rust/src/: gpu.rs
src/: main.rs
